[package]
name = "tiem"
version = "0.1.0"
authors = ["monaqa <cmonaqa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
dirs = "4.0.0"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_with = "1.11.0"
structopt = "0.3.23"
thiserror = "1.0.29"
toml = "0.5.8"
